Add content HTML

--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
   <body>
     <h1> Discover hidden places in the world around you </h1>
     <a href="./index.html">Download Excursion (Coming Soon!)</a>
+    <div>
+    <video autoplay>
+      <source src="resources/videos/excursion.mp4" />
+    </video>
+  </div>
+  <h2> Your personal travel guide</h2>
+  <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  <br>
+    <img src="resources/images/camp.jpg"/>
+    <br>
+    <br>
+    <br>
+    <img src="resources/images/phone.png"/>
+      <h2>Coming Soon for iPhone and Android</h2>
+      <a href=".index.html">Download Excursion (Coming Soon!)</a>
+      <p class="copy">&copy; Excursion</p>
   </body>
 </html>
